syntax = "proto3";

message StorageInfo{
	string id = 1;
	string url = 2;
}
